--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>منيو فرايز داي | تجربة تفاعلية</title>
+    <title>منيو فرايز داي</title>
     <!-- إضافة أيقونة الموقع (Favicon) -->
     <link rel="icon" href="assets/ش.png" type="image/png">
     
@@ -353,3 +353,4 @@ updateUI();
 </body>
 
 </html>
+
