--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         
         <!-- حقل اسم العميل الجديد -->
         <div class="customer-field">
-            <label for="custName">اسم العميل (إجباري):</label>
+            <label for="custName">اسم العميل:</label>
             <input type="text" id="custName" placeholder="اكتب اسمك هنا...">
         </div>
 
@@ -464,3 +464,4 @@ updateUI();
 </script>
 </body>
 </html>
+
